# Generated by Django 5.2.6 on 2025-11-06 01:12

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('avaliacao_docente', '0015_adicionar_campo_encerrado_ciclo'),
    ]

    operations = [
        migrations.CreateModel(
            name='LembreteAvaliacao',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('data_criacao', models.DateTimeField(auto_now_add=True, help_text='Data e hora de criação do registro', verbose_name='Data de Criação')),
                ('data_atualizacao', models.DateTimeField(auto_now=True, help_text='Data e hora da última atualização', verbose_name='Data de Atualização')),
                ('tipo', models.CharField(choices=[('criacao', 'Notificação de Criação'), ('dois_dias', 'Lembrete - 2 Dias Antes')], max_length=20, verbose_name='Tipo de Lembrete')),
                ('data_envio', models.DateTimeField(auto_now_add=True, verbose_name='Data de Envio')),
                ('total_enviados', models.PositiveIntegerField(default=0, help_text='Quantidade de e-mails enviados com sucesso', verbose_name='Total de E-mails Enviados')),
                ('ciclo', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='lembretes_enviados', to='avaliacao_docente.cicloavaliacao', verbose_name='Ciclo de Avaliação')),
            ],
            options={
                'verbose_name': 'Lembrete de Avaliação',
                'verbose_name_plural': 'Lembretes de Avaliação',
                'db_table': 'avaliacao_docente_lembrete_avaliacao',
                'ordering': ['-data_envio'],
                'indexes': [models.Index(fields=['ciclo', 'tipo'], name='avaliacao_d_ciclo_i_af5847_idx'), models.Index(fields=['data_envio'], name='avaliacao_d_data_en_743ee0_idx')],
                'unique_together': {('ciclo', 'tipo')},
            },
        ),
    ]
